syntax = "proto3";

import "google/api/annotations.proto"; // Standard Google import

service Greeter {
  // 1. Defined as a gRPC method
  rpc SayHello (HelloRequest) returns (HelloReply) {
    // 2. Transcoding: Map this method to a specific HTTP GET path
    option (google.api.http) = {
      get: "/v1/greeter/{name}" 
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}